# crud-django-cbv

./: .coveragerc  .flake8  .gitignore  .hidden  ANNOTATIONS.txt  LICENSE  METAS.txt  Procfile  README.md  gulpfile.js  login.txt  manage.py  package.json  poetry.toml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
apps/authentication/: forms.py  urls.py  views.py
apps/clients/: admin.py  apps.py  forms.py  get_username.py  models.py  translation.py  urls.py  views.py
apps/clients/migrations/: 0000_groups.py  0001_auto_20211002_2140.py  0001_initial.py  0002_alter_clientmodel_created_by.py  0002_alter_clientmodel_created_by_user.py  0002_auto_20210930_2203.py  0002_rename_cpf_or_cnpj_clientmodel_client_type.py  0003_alter_clientmodel_created_by.py  0003_alter_clientmodel_created_by_user.py  0003_auto_20211013_1729.py  0004_alter_clientmodel_rg.py  0004_auto_20211008_2109.py  0004_auto_20211008_2340.py  0005_alter_clientmodel_created_by.py  0005_auto_20211008_2341.py  0005_auto_20211013_1903.py  0006_auto_20211008_2114.py  (+14 more)
apps/core/: context_processors.py  places.py
apps/home/: urls.py  views.py
apps/person/: admin.py  models.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  layouts.py  models.py  urls.py  views.py
crud/: asgi.py  urls.py  wsgi.py
crud/config/: settings.py
crud/templates/: base.html
management/: asgi.py  urls.py  wsgi.py
management/config/: create.py  settings.py
management/staticfiles/: staticfiles.json  steam_default_avatar.png:Zone.068ccdb6229f.Identifier
management/templates/: 403.html  404.html  500.html  base.html
patch/: 0000_groups.py
(+101 files in other folders)
