[tool.poetry]
name = "crud-django-cbv"
version = "0.1.0"
description = ""
authors = ["William Canin <william.costa.canin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
django-debug-toolbar = "^3.2.2"
python-decouple = "^3.4"
Pillow = "^8.3.2"
django-cleanup = "^5.2.0"
psycopg2 = "^2.9.1"
django-crispy-forms = "^1.13.0"
pyUFbr = "^0.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pre-commit = "^2.15.0"
django-extensions = "^3.1.3"
ipython = "^7.27.0"
black = "^21.8b0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
