[tool.poetry]
name = "crud-django-cbv"
version = "0.1.0"
description = "Registration control system"
authors = ["William C. Canin <william.costa.canin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.9"
Django = "3.2.7"
dj-database-url = "0.5.0"
django-heroku = "0.3.1"
gunicorn = "20.1.0"
python-decouple = "3.4"
Pillow = "8.3.2"
django-cleanup = "5.2.0"
psycopg2 = "2.9.1"
django-crispy-forms = "1.13.0"
python-gettext = "4.0"
django-modeltranslation = "0.17.3"

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
pytest = "6.2.5"
pytest-django = "4.4.0"
django-extensions = "3.1.3"
ipython = "7.27.0"
django-debug-toolbar = "3.2.2"
black = "22.6.0"
coverage = "6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
